# Data-Mesh-Fundamentals

./: README.md  main.py  pyproject.toml
generate_dataset/: generate_raw.py  local_to_s3_duckdb.py
